--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Zhongjun Zhang"
-  avatar           : "my_photo.png"
+  avatar           : "photo_1.png"
   bio              : #"Your biography for the left-hand sidebar"
   location         : "Ann Arbor, US"
   employer         :
