--- a/_config.yml
+++ b/_config.yml
@@ -80,14 +80,14 @@ analytics:
 
 # Site Author
 author:
-  name             : "Zhongjun Zhang"
-  avatar           : "photo_1.png"
+  name             : #"Zhongjun Zhang"
+  avatar           : #"photo_1.png"
   bio              : #"Your biography for the left-hand sidebar"
-  location         : "Ann Arbor, US"
+  location         : #"Ann Arbor, US"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
-  email            : 'zhongjun@umich.edu'
+  email            : #'zhongjun@umich.edu'
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
